# test-pyproject-toml

./: README.rst  project.mk  pyproject.toml  requirements.txt
.github/workflows/: django.yml
backend/settings/: base.py  dev.py
contactpage/migrations/: 0001_initial.py
frontend/: package-lock.json
home/migrations/: 0003_alter_homepage_options_homepage_marketing_blocks.py
privacy/migrations/: 0001_initial.py
siteuser/migrations/: 0001_initial.py
